Split handling of indexes and tools in v2
