# gen/http/indexes/server/paths.go
@@ -1,0 +1,23 @@
+// Code generated by goa v2.0.0-wip, DO NOT EDIT.
+//
+// HTTP request path constructors for the indexes service.
+//
+// Command:
+// $ goa gen github.com/arduino/arduino-create-agent/design
+
+package server
+
+// ListIndexesPath returns the URL path to the indexes service list HTTP endpoint.
+func ListIndexesPath() string {
+	return "/v2/pkgs/indexes"
+}
+
+// AddIndexesPath returns the URL path to the indexes service add HTTP endpoint.
+func AddIndexesPath() string {
+	return "/v2/pkgs/indexes/:id"
+}
+
+// RemoveIndexesPath returns the URL path to the indexes service remove HTTP endpoint.
+func RemoveIndexesPath() string {
+	return "/v2/pkgs/indexes/:id"
+}
