# gen/http/indexes/server/server.go
@@ -1,6 +1,6 @@
 // Code generated by goa v2.0.0-wip, DO NOT EDIT.
 //
-// tools HTTP server
+// indexes HTTP server
 //
 // Command:
 // $ goa gen github.com/arduino/arduino-create-agent/design
@@ -11,18 +11,17 @@ import (
 	"context"
 	"net/http"
 
-	tools "github.com/arduino/arduino-create-agent/gen/tools"
+	indexes "github.com/arduino/arduino-create-agent/gen/indexes"
 	goa "goa.design/goa"
 	goahttp "goa.design/goa/http"
 )
 
-// Server lists the tools service endpoint HTTP handlers.
+// Server lists the indexes service endpoint HTTP handlers.
 type Server struct {
-	Mounts    []*MountPoint
-	Available http.Handler
-	Installed http.Handler
-	Install   http.Handler
-	Remove    http.Handler
+	Mounts []*MountPoint
+	List   http.Handler
+	Add    http.Handler
+	Remove http.Handler
 }
 
 // ErrorNamer is an interface implemented by generated error structs that
@@ -42,9 +41,9 @@ type MountPoint struct {
 	Pattern string
 }
 
-// New instantiates HTTP handlers for all the tools service endpoints.
+// New instantiates HTTP handlers for all the indexes service endpoints.
 func New(
-	e *tools.Endpoints,
+	e *indexes.Endpoints,
 	mux goahttp.Muxer,
 	dec func(*http.Request) goahttp.Decoder,
 	enc func(context.Context, http.ResponseWriter) goahttp.Encoder,
@@ -52,179 +51,123 @@ func New(
 ) *Server {
 	return &Server{
 		Mounts: []*MountPoint{
-			{"Available", "GET", "/v2/pkgs/tools/available"},
-			{"Installed", "GET", "/v2/pkgs/tools/installed"},
-			{"Install", "PUT", "/v2/pkgs/tools/installed"},
-			{"Remove", "DELETE", "/v2/pkgs/tools/installed/:id"},
+			{"List", "GET", "/v2/pkgs/indexes"},
+			{"Add", "PUT", "/v2/pkgs/indexes/:id"},
+			{"Remove", "DELETE", "/v2/pkgs/indexes/:id"},
 		},
-		Available: NewAvailableHandler(e.Available, mux, dec, enc, eh),
-		Installed: NewInstalledHandler(e.Installed, mux, dec, enc, eh),
-		Install:   NewInstallHandler(e.Install, mux, dec, enc, eh),
-		Remove:    NewRemoveHandler(e.Remove, mux, dec, enc, eh),
+		List:   NewListHandler(e.List, mux, dec, enc, eh),
+		Add:    NewAddHandler(e.Add, mux, dec, enc, eh),
+		Remove: NewRemoveHandler(e.Remove, mux, dec, enc, eh),
 	}
 }
 
 // Service returns the name of the service served.
-func (s *Server) Service() string { return "tools" }
+func (s *Server) Service() string { return "indexes" }
 
 // Use wraps the server handlers with the given middleware.
 func (s *Server) Use(m func(http.Handler) http.Handler) {
-	s.Available = m(s.Available)
-	s.Installed = m(s.Installed)
-	s.Install = m(s.Install)
+	s.List = m(s.List)
+	s.Add = m(s.Add)
 	s.Remove = m(s.Remove)
 }
 
-// Mount configures the mux to serve the tools endpoints.
+// Mount configures the mux to serve the indexes endpoints.
 func Mount(mux goahttp.Muxer, h *Server) {
-	MountAvailableHandler(mux, h.Available)
-	MountInstalledHandler(mux, h.Installed)
-	MountInstallHandler(mux, h.Install)
+	MountListHandler(mux, h.List)
+	MountAddHandler(mux, h.Add)
 	MountRemoveHandler(mux, h.Remove)
 }
 
-// MountAvailableHandler configures the mux to serve the "tools" service
-// "available" endpoint.
-func MountAvailableHandler(mux goahttp.Muxer, h http.Handler) {
-	f, ok := h.(http.HandlerFunc)
-	if !ok {
-		f = func(w http.ResponseWriter, r *http.Request) {
-			h.ServeHTTP(w, r)
-		}
-	}
-	mux.Handle("GET", "/v2/pkgs/tools/available", f)
-}
-
-// NewAvailableHandler creates a HTTP handler which loads the HTTP request and
-// calls the "tools" service "available" endpoint.
-func NewAvailableHandler(
-	endpoint goa.Endpoint,
-	mux goahttp.Muxer,
-	dec func(*http.Request) goahttp.Decoder,
-	enc func(context.Context, http.ResponseWriter) goahttp.Encoder,
-	eh func(context.Context, http.ResponseWriter, error),
-) http.Handler {
-	var (
-		encodeResponse = EncodeAvailableResponse(enc)
-		encodeError    = goahttp.ErrorEncoder(enc)
-	)
-	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
-		ctx = context.WithValue(ctx, goa.MethodKey, "available")
-		ctx = context.WithValue(ctx, goa.ServiceKey, "tools")
-
-		res, err := endpoint(ctx, nil)
-
-		if err != nil {
-			if err := encodeError(ctx, w, err); err != nil {
-				eh(ctx, w, err)
-			}
-			return
-		}
-		if err := encodeResponse(ctx, w, res); err != nil {
-			eh(ctx, w, err)
-		}
-	})
-}
-
-// MountInstalledHandler configures the mux to serve the "tools" service
-// "installed" endpoint.
-func MountInstalledHandler(mux goahttp.Muxer, h http.Handler) {
-	f, ok := h.(http.HandlerFunc)
-	if !ok {
-		f = func(w http.ResponseWriter, r *http.Request) {
-			h.ServeHTTP(w, r)
-		}
-	}
-	mux.Handle("GET", "/v2/pkgs/tools/installed", f)
-}
-
-// NewInstalledHandler creates a HTTP handler which loads the HTTP request and
-// calls the "tools" service "installed" endpoint.
-func NewInstalledHandler(
-	endpoint goa.Endpoint,
-	mux goahttp.Muxer,
-	dec func(*http.Request) goahttp.Decoder,
-	enc func(context.Context, http.ResponseWriter) goahttp.Encoder,
-	eh func(context.Context, http.ResponseWriter, error),
-) http.Handler {
-	var (
-		encodeResponse = EncodeInstalledResponse(enc)
-		encodeError    = goahttp.ErrorEncoder(enc)
-	)
-	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
-		ctx = context.WithValue(ctx, goa.MethodKey, "installed")
-		ctx = context.WithValue(ctx, goa.ServiceKey, "tools")
-
-		res, err := endpoint(ctx, nil)
-
-		if err != nil {
-			if err := encodeError(ctx, w, err); err != nil {
-				eh(ctx, w, err)
-			}
-			return
-		}
-		if err := encodeResponse(ctx, w, res); err != nil {
-			eh(ctx, w, err)
-		}
-	})
-}
-
-// MountInstallHandler configures the mux to serve the "tools" service
-// "install" endpoint.
-func MountInstallHandler(mux goahttp.Muxer, h http.Handler) {
-	f, ok := h.(http.HandlerFunc)
-	if !ok {
-		f = func(w http.ResponseWriter, r *http.Request) {
-			h.ServeHTTP(w, r)
-		}
-	}
-	mux.Handle("PUT", "/v2/pkgs/tools/installed", f)
-}
-
-// NewInstallHandler creates a HTTP handler which loads the HTTP request and
-// calls the "tools" service "install" endpoint.
-func NewInstallHandler(
-	endpoint goa.Endpoint,
-	mux goahttp.Muxer,
-	dec func(*http.Request) goahttp.Decoder,
-	enc func(context.Context, http.ResponseWriter) goahttp.Encoder,
-	eh func(context.Context, http.ResponseWriter, error),
-) http.Handler {
-	var (
-		decodeRequest  = DecodeInstallRequest(mux, dec)
-		encodeResponse = EncodeInstallResponse(enc)
-		encodeError    = goahttp.ErrorEncoder(enc)
-	)
-	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
-		ctx = context.WithValue(ctx, goa.MethodKey, "install")
-		ctx = context.WithValue(ctx, goa.ServiceKey, "tools")
-		payload, err := decodeRequest(r)
-		if err != nil {
-			if err := encodeError(ctx, w, err); err != nil {
-				eh(ctx, w, err)
-			}
-			return
-		}
-
-		res, err := endpoint(ctx, payload)
-
-		if err != nil {
-			if err := encodeError(ctx, w, err); err != nil {
-				eh(ctx, w, err)
-			}
-			return
-		}
-		if err := encodeResponse(ctx, w, res); err != nil {
-			eh(ctx, w, err)
-		}
-	})
-}
-
-// MountRemoveHandler configures the mux to serve the "tools" service "remove"
+// MountListHandler configures the mux to serve the "indexes" service "list"
 // endpoint.
+func MountListHandler(mux goahttp.Muxer, h http.Handler) {
+	f, ok := h.(http.HandlerFunc)
+	if !ok {
+		f = func(w http.ResponseWriter, r *http.Request) {
+			h.ServeHTTP(w, r)
+		}
+	}
+	mux.Handle("GET", "/v2/pkgs/indexes", f)
+}
+
+// NewListHandler creates a HTTP handler which loads the HTTP request and calls
+// the "indexes" service "list" endpoint.
+func NewListHandler(
+	endpoint goa.Endpoint,
+	mux goahttp.Muxer,
+	dec func(*http.Request) goahttp.Decoder,
+	enc func(context.Context, http.ResponseWriter) goahttp.Encoder,
+	eh func(context.Context, http.ResponseWriter, error),
+) http.Handler {
+	var (
+		encodeResponse = EncodeListResponse(enc)
+		encodeError    = goahttp.ErrorEncoder(enc)
+	)
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
+		ctx = context.WithValue(ctx, goa.MethodKey, "list")
+		ctx = context.WithValue(ctx, goa.ServiceKey, "indexes")
+
+		res, err := endpoint(ctx, nil)
+
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil {
+				eh(ctx, w, err)
+			}
+			return
+		}
+		if err := encodeResponse(ctx, w, res); err != nil {
+			eh(ctx, w, err)
+		}
+	})
+}
+
+// MountAddHandler configures the mux to serve the "indexes" service "add"
+// endpoint.
+func MountAddHandler(mux goahttp.Muxer, h http.Handler) {
+	f, ok := h.(http.HandlerFunc)
+	if !ok {
+		f = func(w http.ResponseWriter, r *http.Request) {
+			h.ServeHTTP(w, r)
+		}
+	}
+	mux.Handle("PUT", "/v2/pkgs/indexes/:id", f)
+}
+
+// NewAddHandler creates a HTTP handler which loads the HTTP request and calls
+// the "indexes" service "add" endpoint.
+func NewAddHandler(
+	endpoint goa.Endpoint,
+	mux goahttp.Muxer,
+	dec func(*http.Request) goahttp.Decoder,
+	enc func(context.Context, http.ResponseWriter) goahttp.Encoder,
+	eh func(context.Context, http.ResponseWriter, error),
+) http.Handler {
+	var (
+		encodeResponse = EncodeAddResponse(enc)
+		encodeError    = goahttp.ErrorEncoder(enc)
+	)
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
+		ctx = context.WithValue(ctx, goa.MethodKey, "add")
+		ctx = context.WithValue(ctx, goa.ServiceKey, "indexes")
+
+		res, err := endpoint(ctx, nil)
+
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil {
+				eh(ctx, w, err)
+			}
+			return
+		}
+		if err := encodeResponse(ctx, w, res); err != nil {
+			eh(ctx, w, err)
+		}
+	})
+}
+
+// MountRemoveHandler configures the mux to serve the "indexes" service
+// "remove" endpoint.
 func MountRemoveHandler(mux goahttp.Muxer, h http.Handler) {
 	f, ok := h.(http.HandlerFunc)
 	if !ok {
@@ -232,11 +175,11 @@ func MountRemoveHandler(mux goahttp.Muxer, h http.Handler) {
 			h.ServeHTTP(w, r)
 		}
 	}
-	mux.Handle("DELETE", "/v2/pkgs/tools/installed/:id", f)
+	mux.Handle("DELETE", "/v2/pkgs/indexes/:id", f)
 }
 
 // NewRemoveHandler creates a HTTP handler which loads the HTTP request and
-// calls the "tools" service "remove" endpoint.
+// calls the "indexes" service "remove" endpoint.
 func NewRemoveHandler(
 	endpoint goa.Endpoint,
 	mux goahttp.Muxer,
@@ -251,7 +194,7 @@ func NewRemoveHandler(
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
 		ctx = context.WithValue(ctx, goa.MethodKey, "remove")
-		ctx = context.WithValue(ctx, goa.ServiceKey, "tools")
+		ctx = context.WithValue(ctx, goa.ServiceKey, "indexes")
 
 		res, err := endpoint(ctx, nil)
 
