# gen/http/indexes/server/types.go
@@ -1,0 +1,8 @@
+// Code generated by goa v2.0.0-wip, DO NOT EDIT.
+//
+// indexes HTTP server types
+//
+// Command:
+// $ goa gen github.com/arduino/arduino-create-agent/design
+
+package server
