# gen/http/openapi.yaml
@@ -16,17 +16,98 @@ produces:
 - application/xml
 - application/gob
 paths:
-  /tools:
+  /pkgs/indexes:
+    get:
+      tags:
+      - indexes
+      summary: list indexes
+      operationId: indexes#list
+      responses:
+        "200":
+          description: OK response.
+          schema:
+            type: array
+            items:
+              type: string
+              example: Quos quia non.
+      schemes:
+      - http
+  /pkgs/indexes/:id:
+    put:
+      tags:
+      - indexes
+      summary: add indexes
+      operationId: indexes#add
+      responses:
+        "200":
+          description: OK response.
+      schemes:
+      - http
+    delete:
+      tags:
+      - indexes
+      summary: remove indexes
+      operationId: indexes#remove
+      responses:
+        "200":
+          description: OK response.
+      schemes:
+      - http
+  /pkgs/tools/available:
     get:
       tags:
       - tools
-      summary: list tools
-      operationId: tools#list
+      summary: available tools
+      operationId: tools#available
       responses:
         "200":
           description: OK response.
           schema:
             $ref: '#/definitions/ToolsToolResponseCollection'
+      schemes:
+      - http
+  /pkgs/tools/installed:
+    get:
+      tags:
+      - tools
+      summary: installed tools
+      operationId: tools#installed
+      responses:
+        "200":
+          description: OK response.
+          schema:
+            $ref: '#/definitions/ToolsToolResponseCollection'
+      schemes:
+      - http
+    put:
+      tags:
+      - tools
+      summary: install tools
+      operationId: tools#install
+      parameters:
+      - name: InstallRequestBody
+        in: body
+        required: true
+        schema:
+          $ref: '#/definitions/ToolsInstallRequestBody'
+          required:
+          - name
+          - version
+          - packager
+      responses:
+        "200":
+          description: OK response.
+      schemes:
+      - http
+  /pkgs/tools/installed/:id:
+    delete:
+      tags:
+      - tools
+      summary: remove tools
+      operationId: tools#remove
+      responses:
+        "200":
+          description: OK response.
       schemes:
       - http
 definitions:
@@ -56,14 +137,41 @@ definitions:
     - name
     - version
     - packager
+  ToolsInstallRequestBody:
+    title: ToolsInstallRequestBody
+    type: object
+    properties:
+      name:
+        type: string
+        description: The name of the tool
+        example: avrdude
+      packager:
+        type: string
+        description: The packager of the tool
+        example: arduino
+      version:
+        type: string
+        description: The version of the tool
+        example: 6.3.0-arduino9
+    example:
+      name: avrdude
+      packager: arduino
+      version: 6.3.0-arduino9
+    required:
+    - name
+    - version
+    - packager
   ToolsToolResponseCollection:
     title: 'Mediatype identifier: application/vnd.arduino.tool; type=collection; view=default'
     type: array
     items:
       $ref: '#/definitions/ToolResponse'
-    description: ListResponseBody is the result type for an array of ToolResponse
+    description: AvailableResponseBody is the result type for an array of ToolResponse
       (default view)
     example:
+    - name: avrdude
+      packager: arduino
+      version: 6.3.0-arduino9
     - name: avrdude
       packager: arduino
       version: 6.3.0-arduino9
