# gen/http/tools/server/paths.go
@@ -3,11 +3,26 @@
 // HTTP request path constructors for the tools service.
 //
 // Command:
-// $ goa gen github.com/arduino/arduino-create-agent/design -debug
+// $ goa gen github.com/arduino/arduino-create-agent/design
 
 package server
 
-// ListToolsPath returns the URL path to the tools service list HTTP endpoint.
-func ListToolsPath() string {
-	return "/v2/tools"
+// AvailableToolsPath returns the URL path to the tools service available HTTP endpoint.
+func AvailableToolsPath() string {
+	return "/v2/pkgs/tools/available"
+}
+
+// InstalledToolsPath returns the URL path to the tools service installed HTTP endpoint.
+func InstalledToolsPath() string {
+	return "/v2/pkgs/tools/installed"
+}
+
+// InstallToolsPath returns the URL path to the tools service install HTTP endpoint.
+func InstallToolsPath() string {
+	return "/v2/pkgs/tools/installed"
+}
+
+// RemoveToolsPath returns the URL path to the tools service remove HTTP endpoint.
+func RemoveToolsPath() string {
+	return "/v2/pkgs/tools/installed/:id"
 }
