# gen/http/tools/server/types.go
@@ -3,16 +3,29 @@
 // tools HTTP server types
 //
 // Command:
-// $ goa gen github.com/arduino/arduino-create-agent/design -debug
+// $ goa gen github.com/arduino/arduino-create-agent/design
 
 package server
 
 import (
+	tools "github.com/arduino/arduino-create-agent/gen/tools"
 	toolsviews "github.com/arduino/arduino-create-agent/gen/tools/views"
+	goa "goa.design/goa"
 )
 
-// ToolResponseCollection is the type of the "tools" service "list" endpoint
-// HTTP response body.
+// InstallRequestBody is the type of the "tools" service "install" endpoint
+// HTTP request body.
+type InstallRequestBody struct {
+	// The name of the tool
+	Name *string `form:"name,omitempty" json:"name,omitempty" xml:"name,omitempty"`
+	// The version of the tool
+	Version *string `form:"version,omitempty" json:"version,omitempty" xml:"version,omitempty"`
+	// The packager of the tool
+	Packager *string `form:"packager,omitempty" json:"packager,omitempty" xml:"packager,omitempty"`
+}
+
+// ToolResponseCollection is the type of the "tools" service "available"
+// endpoint HTTP response body.
 type ToolResponseCollection []*ToolResponse
 
 // ToolResponse is used to define fields on response body types.
@@ -26,7 +39,7 @@ type ToolResponse struct {
 }
 
 // NewToolResponseCollection builds the HTTP response body from the result of
-// the "list" endpoint of the "tools" service.
+// the "available" endpoint of the "tools" service.
 func NewToolResponseCollection(res toolsviews.ToolCollectionView) ToolResponseCollection {
 	body := make([]*ToolResponse, len(res))
 	for i, val := range res {
@@ -37,4 +50,28 @@ func NewToolResponseCollection(res toolsviews.ToolCollectionView) ToolResponseCo
 		}
 	}
 	return body
+}
+
+// NewInstallToolPayload builds a tools service install endpoint payload.
+func NewInstallToolPayload(body *InstallRequestBody) *tools.ToolPayload {
+	v := &tools.ToolPayload{
+		Name:     *body.Name,
+		Version:  *body.Version,
+		Packager: *body.Packager,
+	}
+	return v
+}
+
+// ValidateInstallRequestBody runs the validations defined on InstallRequestBody
+func ValidateInstallRequestBody(body *InstallRequestBody) (err error) {
+	if body.Name == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("name", "body"))
+	}
+	if body.Version == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("version", "body"))
+	}
+	if body.Packager == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("packager", "body"))
+	}
+	return
 }
